# phira-render

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  conf.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: tauri.yaml
src/: AboutView.vue  App.vue  RPEView.vue  RenderView.vue  TasksView.vue  common.ts  main.ts  model.ts  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/respack/: info.yml
src-tauri/icons/: icon.icns
src-tauri/locales/: create.sh
src-tauri/locales/en-US/: main.ftl  render.ftl
src-tauri/locales/zh-CN/: main.ftl  render.ftl
src-tauri/src/: common.rs  ipc.rs  main.rs  preview.rs  render.rs  task.rs
src/assets/: main.css
src/components/: ConfigView.vue  TipSwitch.vue  TipTextField.vue  TooltipIcon.vue
src/router/: index.ts
